fix break that I caused w.r.t. bottom panel hiding, css overflow, and tooltips

--- a/css/mirador.css
+++ b/css/mirador.css
@@ -674,10 +674,10 @@ li.highlight {
 
 /* window scaffolding */
 .window {
-  position:absolute;
+  position:relative;
   width:100%;
   height:100%;
-  overflow: visible;
+  overflow: hidden;
   background-color: #333;
 }
 .manifest-info {
